Extract secured resource to different API method
Also add utility class for getting a valid set of user credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-# Configuration file
-# key = value
-quarkus.http.auth.basic=true
-quarkus.security.users.embedded.enabled=true
-quarkus.security.users.embedded.plain-text=true
-quarkus.security.users.embedded.users.scott=jb0ss
-
 quarkus.smallrye-graphql.error-extension-fields=classification,code
 quarkus.smallrye-graphql.show-runtime-exception-message=java.lang.SecurityException
+
+%test.quarkus.http.auth.basic=true
+%test.quarkus.security.users.embedded.enabled=true
+%test.quarkus.security.users.embedded.plain-text=true
+%test.quarkus.security.users.embedded.users.scott=jb0ss
